infra/k8s/demo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: us.gcr.io/packbackdemo/demo
---
apiVersion: v1
kind: Service
metadata:
  name: demo-srv
spec:
  selector:
    app: demo
  ports:
    - name: demo
      protocol: TCP
      port: 3000
      targetPort: 3000
